@@ -21,7 +21,6 @@ xrandrDbus::xrandrDbus(QObject* parent) : QObject(parent)
 {
     mXsettings =new QGSettings("org.ukui.SettingsDaemon.plugins.xsettings");
     mScale = mXsettings->get("scaling-factor").toDouble();
-    initShortKeys();
 }
 xrandrDbus::~xrandrDbus()
 {
@@ -50,30 +49,6 @@ double xrandrDbus::scale(){
 
 QString xrandrDbus::priScreenName(){
     return mName;
-}
-
-void xrandrDbus::initShortKeys()
-{
-    QAction *brightDown= new QAction(this);
-    brightDown->setObjectName(QStringLiteral("Brightness down"));
-    brightDown->setProperty("componentName", QStringLiteral(UKUI_DAEMON_NAME));
-    KGlobalAccel::self()->setDefaultShortcut(brightDown, QList<QKeySequence>{Qt::Key_MonBrightnessDown});
-    KGlobalAccel::self()->setShortcut(brightDown, QList<QKeySequence>{Qt::Key_MonBrightnessDown});
-    connect(brightDown, &QAction::triggered, this, [this]() {
-        USD_LOG(LOG_DEBUG,"Brightness down...............");
-        Q_EMIT brightnessDown();
-    });
-
-    QAction *brightUp = new QAction(this);
-    brightUp->setObjectName(QStringLiteral("Brightness Up"));
-    brightUp->setProperty("componentName", QStringLiteral(UKUI_DAEMON_NAME));
-    KGlobalAccel::self()->setDefaultShortcut(brightUp, QList<QKeySequence>{Qt::Key_MonBrightnessUp});
-    KGlobalAccel::self()->setShortcut(brightUp, QList<QKeySequence>{Qt::Key_MonBrightnessUp});
-    connect(brightUp, &QAction::triggered, this, [this]() {
-        USD_LOG(LOG_DEBUG,"Brightness Up ..................");
-
-        Q_EMIT brightnessUp();
-    });
 }
 
 int xrandrDbus::priScreenChanged(int x, int y, int width, int height, QString name)
