@@ -1,3 +1,11 @@
+ukui-settings-daemon (3.1.0-1.2) v101; urgency=medium
+
+  * BUG号：无
+  * 需求号：无
+  * 其他改动说明：增加显示器显示模式的记忆功能，优化部分组件
+
+ -- sundagao <sundagao@kylinos.cn>  Mon, 27 Sep 2021 08:59:57 +0800
+
 ukui-settings-daemon (3.1.0-1.1) v101; urgency=medium
 
   * BUG号：无
